<resources>
    <string name="app_name">FourSquare</string>

    <string name="restaurants_title">Restaurants</string>

    <string name="details__description">Description:</string>
    <string name="details__address">Address:</string>
    <string name="details__rating">Rating:</string>
    <string name="details__hours">Hours:</string>
    <string name="details__price_category">Price category:</string>

    <string name="details__rating_placeholder">%.1f / 10</string>
    <string name="details__restaurant_photo">Restaurant photo</string>

    <string name="error__restaurants_not_loaded">Failed to load restaurants. Please check your internet connection.</string>
    <string name="error__restaurant_details_empty">Failed to load restaurant details. Please try again.</string>
    <string name="error__current_location_not_loaded">Failed to get current location</string>

    <string name="permission__location__rationale_title">Location access required</string>
    <string name="permission__location__rationale_message">To work properly, this app requires access you your device\'s location.
    Please grant it on the next screen. Unfortunately, it is not possible to use the app otherwise.</string>
    <string name="permission__location__denied_forever_message">To work properly, this app requires access you your device\'s location.
        Please grant it from the app\'s settings. Unfortunately, it is not possible to use the app otherwise.</string>
    <string name="permission__location__leave">Leave</string>
    <string name="permission__location__grant">Grant</string>
    <string name="permission__location__settings">Go to Settings</string>
</resources>
